--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -54,6 +54,10 @@ Vagrant.configure("2") do |config|
   #
   # View the documentation for the provider you are using for more
   # information on available options.
+  #config.vm.provider "virtualbox" do |v|
+  #  v.gui = true
+  #  v.customize ["modifyvm", :id, "--clipboard", "bidirectional"]
+  #end
 
   # Define a Vagrant Push strategy for pushing to Atlas. Other push strategies
   # such as FTP and Heroku are also available. See the documentation at
@@ -69,5 +73,8 @@ Vagrant.configure("2") do |config|
   #   apt-get update
   #   apt-get install -y apache2
   # SHELL
-  config.vm.provision :shell, path: "bootstrap.sh"
+  # first boot
+  config.vm.provision :shell, path: "firstboot.sh"
+  # every boot
+  config.vm.provision :shell, path: "bootstrap.sh", run: "always"
 end
