--- a/src/ct1/app/config/config.yml
+++ b/src/ct1/app/config/config.yml
@@ -40,10 +40,11 @@ twig:
 # Doctrine Configuration
 doctrine:
     dbal:
-        driver:   pdo_mysql
+        driver:   "%database_driver%"
         host:     "%database_host%"
         port:     "%database_port%"
         dbname:   "%database_name%"
+        path:     "%database_path%"
         user:     "%database_user%"
         password: "%database_password%"
         charset:  UTF8
