--- a/src/ct1/app/config/security.yml
+++ b/src/ct1/app/config/security.yml
@@ -4,21 +4,19 @@ security:
 
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory:
-            memory: ~
+        database_users:
+            entity: { class: AppBundle:User, property: name }
+    
+    encoders:
+        AppBundle\Entity\User: bcrypt
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-
-        main:
+        default:
             anonymous: ~
             # activate different ways to authenticate
 
-            # http_basic: ~
-            # http://symfony.com/doc/current/book/security.html#a-configuring-how-your-users-will-authenticate
+            http_basic: ~
 
             # form_login: ~
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
