--- a/src/ct1/composer.json
+++ b/src/ct1/composer.json
@@ -30,7 +30,8 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "symfony/assetic-bundle": "^2.8",
         "friendsofsymfony/rest-bundle": "^2.0",
-        "doctrine/doctrine-migrations-bundle": "^1.1"
+        "doctrine/doctrine-migrations-bundle": "^1.1",
+        "besimple/soap-wsdl": "^0.2.6"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
