--- a/src/ct1/app/config/services.yml
+++ b/src/ct1/app/config/services.yml
@@ -7,3 +7,6 @@ services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    authentication_service:
+        class: AppBundle\Services\AuthenticationService
+        arguments: [ "@doctrine.orm.entity_manager" ]
