--- a/src/ct1/src/ApiBundle/Resources/config/routing.yml
+++ b/src/ct1/src/ApiBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-api_homepage:
-    path:     /
-    defaults: { _controller: ApiBundle:Default:index }
+api_soap_check:
+    path: /soap/check
+    defaults: { _controller: ApiBundle:Soap:check }
