Hooking up routes for the rest call

--- a/src/ct1/src/ApiBundle/Resources/config/routing.yml
+++ b/src/ct1/src/ApiBundle/Resources/config/routing.yml
@@ -1,3 +1,6 @@
 api_soap_check:
     path: /soap/check
     defaults: { _controller: ApiBundle:Soap:check }
+api_rest_submit:
+    path: /rest/submit
+    defaults: { _controller: ApiBundle:Rest:newPost }
